# sgbusoready

./: .codespellrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  Justfile  _typos.toml  build.rs  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/: rust.md
.github/workflows/: ci.yml  security.yml
.supply-chain/: config.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/serpoul/sgbusready/: AlarmReceiver.kt  AlarmScheduler.kt  BootReceiver.kt  CommuteNative.kt  CommuteService.kt  InsetsHelper.kt  MainActivity.kt  NotificationHelper.kt  TimePicker.kt
android/app/src/main/kotlin/com/sgbuscommute/: AlarmReceiver.kt  AlarmScheduler.kt  BootReceiver.kt  CommuteNative.kt  CommuteService.kt  InsetsHelper.kt  MainActivity.kt  NotificationHelper.kt  TimePicker.kt
android/app/src/main/kotlin/com/sgbusoready/: AlarmReceiver.kt  AlarmScheduler.kt  BootReceiver.kt  CommuteNative.kt  CommuteService.kt  InsetsHelper.kt  MainActivity.kt  NotificationHelper.kt  TimePicker.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
crates/sgbr-core/: Cargo.toml
crates/sgbr-core/examples/: live_fetch.rs
crates/sgbr-core/src/: error.rs  lib.rs
crates/sgbr-core/src/bus_catalog/: fetch.rs  mod.rs  model.rs  parse.rs  search.rs  store.rs
crates/sgbr-core/src/commute/: display.rs  mod.rs  model.rs  schedule.rs  store.rs  window.rs
crates/sgbr-core/src/lta/: arrival.rs  client.rs  mod.rs  model.rs
docs/superpowers/plans/: 2026-06-21-android-spike-1-slint-on-device.md  2026-06-21-android-spike-2-gradle-notification-widget.md  2026-06-21-core-data-layer-and-slint-proof.md  2026-06-22-commute-core.md  2026-06-22-commute-scheduling-persistence.md  2026-06-23-android-commute-live-update.md  2026-06-23-bus-catalog-core.md  2026-06-23-phase-e-live-update-chip.md  2026-06-23-polished-ui-stop-search.md  2026-06-24-multi-stop-commutes-android.md  2026-06-24-multi-stop-commutes-core.md  2026-06-24-multi-stop-commutes-ui.md
docs/superpowers/specs/: 2026-06-21-sg-bus-ready-design.md  2026-06-22-commutes-live-update-design.md  2026-06-23-polished-ui-stop-search-design.md  2026-06-24-multi-stop-commutes-design.md  2026-06-28-timeline-and-home-design.md
src/: android_bridge.rs  catalog.rs  editor.rs  hero.rs  lib.rs  main.rs  rows.rs
ui/: app.slint  components.slint  theme.slint
